moved from HeapBuffer to DirectBuffer